<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/general">

        <EditTextPreference
            android:key="slotakey"
            android:title="@string/slota_settings"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="slotbkey"
            android:title="@string/slotb_settings"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/rec_options">
            <SwitchPreferenceCompat
            android:key="twrp_theme"
            android:title="@string/add_db_options_to_twrp"
             android:summary="@string/twrp_desc"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>