<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="always"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:roundedCorners="top_left|top_right">

        <dev.oneuiproject.oneui.widget.Separator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/db_dev" />

        <dev.oneuiproject.oneui.widget.RoundLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/oui_background_color"
            android:orientation="vertical">

            <dev.oneuiproject.oneui.widget.CardView
                android:id="@+id/about_bottom_dev_david"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:IconDrawable="@drawable/about_page_avatar_david"
                app:TitleText="David42069"
                app:SummaryText="@string/david_desc" />

            <dev.oneuiproject.oneui.widget.CardView
                android:id="@+id/about_bottom_dev_bob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:IconDrawable="@drawable/about_page_avatar_bob"
                app:TitleText="Bobert"
                app:SummaryText="@string/bob_desc"
                app:isDividerViewVisible="true" />

        </dev.oneuiproject.oneui.widget.RoundLinearLayout>

        <dev.oneuiproject.oneui.widget.Separator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ouip_team" />

        <dev.oneuiproject.oneui.widget.RoundLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/oui_background_color"
            android:orientation="vertical">

            <dev.oneuiproject.oneui.widget.CardView
                android:id="@+id/about_bottom_dev_yann"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:IconDrawable="@drawable/about_page_avatar_yann"
                app:TitleText="Yanndroid" />

            <dev.oneuiproject.oneui.widget.CardView
                android:id="@+id/about_bottom_dev_salvo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:IconDrawable="@drawable/about_page_avatar_salvo"
                app:TitleText="Salvo Giangreco"
                app:isDividerViewVisible="true" />

        </dev.oneuiproject.oneui.widget.RoundLinearLayout>

        <dev.oneuiproject.oneui.widget.Separator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/os_lic" />

    <dev.oneuiproject.oneui.widget.RoundLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/oui_background_color"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <dev.oneuiproject.oneui.widget.CardView
            android:id="@+id/about_bottom_gnu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:TitleText="@string/gnu_lic"
            app:SummaryText="DualbootHelper" />

        <dev.oneuiproject.oneui.widget.CardView
            android:id="@+id/about_bottom_oss_apache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:TitleText="@string/apache_lic"
            app:SummaryText="androidx  •  material-components  •  lottie"
            app:isDividerViewVisible="true" />

        <dev.oneuiproject.oneui.widget.CardView
            android:id="@+id/about_bottom_oss_mit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:TitleText="@string/mit_lic"
            app:SummaryText="oneui-core  •  oneui-design"
            app:isDividerViewVisible="true" />

    </dev.oneuiproject.oneui.widget.RoundLinearLayout>

        <dev.oneuiproject.oneui.widget.RoundLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/oui_background_color"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <dev.oneuiproject.oneui.widget.CardView
                android:id="@+id/about_translate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:TitleText="@string/translation"
                app:SummaryText="Crowdin" />

        </dev.oneuiproject.oneui.widget.RoundLinearLayout>

        <dev.oneuiproject.oneui.widget.RelatedCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:title="@string/links">

            <TextView
                android:id="@+id/about_donate"
                style="@style/OneUI.RelativeLinkTextViewStyle"
                android:text="@string/donate" />

            <TextView
                android:id="@+id/about_xda"
                style="@style/OneUI.RelativeLinkTextViewStyle"
                android:text="@string/xda_post" />

            <TextView
                android:id="@+id/about_bottom_relative_ouip"
                style="@style/OneUI.RelativeLinkTextViewStyle"
                android:text="OneUI Project" />

        </dev.oneuiproject.oneui.widget.RelatedCard>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>