<?xml version="1.0" encoding="utf-8"?>
<dev.oneuiproject.oneui.layout.ToolbarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:expandable="true"
    app:expanded="false"
    app:subtitle="@string/description"
    app:title="@string/app_name"
    tools:context=".MainActivity"
    android:id="@+id/home">

    <androidx.core.widget.NestedScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?roundedCornerColor"
        app:layout_location="main_content"
        android:fillViewport="true"
        android:overScrollMode="always"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <dev.oneuiproject.oneui.widget.Separator
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info" />

            <dev.oneuiproject.oneui.widget.RoundLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/oui_background_color"
                android:orientation="vertical">
            
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="24dp"
                        android:paddingStart="24dp">

                        <ImageView
                            android:layout_width="wrap_content" 
                            android:layout_height="225dp"
                            android:src="@drawable/device"
                            android:adjustViewBounds="true"/>
                    
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
    
                        <dev.oneuiproject.oneui.widget.ui.widget.CardView
                            android:id="@+id/status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:TitleText="@string/slota_os"
                            app:SummaryText="@{statusstring}" />
    
                        <dev.oneuiproject.oneui.widget.ui.widget.CardView
                            android:id="@+id/slota_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:TitleText="@string/slota_os"
                            app:SummaryText="@{slotastring}"
                            app:isDividerViewVisible="true" />
    
                        <dev.oneuiproject.oneui.widget.ui.widget.CardView
                            android:id="@+id/slotb_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:TitleText="@string/slotb_os"
                            app:SummaryText="@{slotbstring}"
                            app:isDividerViewVisible="true" />
    
                    </LinearLayout>
                
                </LinearLayout>
                
            </dev.oneuiproject.oneui.widget.RoundLinearLayout>
        
            <dev.oneuiproject.oneui.widget.Separator
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slota_qact" />
            
            <dev.oneuiproject.oneui.widget.RoundLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/oui_background_color"
                android:orientation="vertical">

                <dev.oneuiproject.oneui.widget.ui.widget.CardView                
                    android:id="@+id/reboot_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    app:TitleText="@string/reboot_a"
                    app:IconDrawable="@drawable/ic_oui_restart"/>

                <dev.oneuiproject.oneui.widget.ui.widget.CardView                
                    android:id="@+id/rec_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    app:TitleText="@string/recovery_a"
                    app:IconDrawable="@drawable/ic_oui_lightning"
                    app:isDividerViewVisible="true" />

            </dev.oneuiproject.oneui.widget.RoundLinearLayout>

            <dev.oneuiproject.oneui.widget.Separator
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slotb_qact" />
            
            <dev.oneuiproject.oneui.widget.RoundLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/oui_background_color"
                android:orientation="vertical">

                <dev.oneuiproject.oneui.widget.ui.widget.CardView                
                    android:id="@+id/reboot_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    app:TitleText="@string/reboot_b"
                    app:IconDrawable="@drawable/ic_oui_restart"/>

                <dev.oneuiproject.oneui.widget.ui.widget.CardView                
                    android:id="@+id/rec_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    app:TitleText="@string/recovery_b"
                    app:IconDrawable="@drawable/ic_oui_lightning"
                    app:isDividerViewVisible="true" />

            </dev.oneuiproject.oneui.widget.RoundLinearLayout>

            <dev.oneuiproject.oneui.widget.Separator
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/misc_qact" />
            
            <dev.oneuiproject.oneui.widget.RoundLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/oui_background_color"
                android:orientation="vertical">

                <dev.oneuiproject.oneui.widget.ui.widget.CardView                
                    android:id="@+id/bootloader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    app:TitleText="@string/dl_mode"
                    app:IconDrawable="@drawable/ic_oui_save"/>

                <dev.oneuiproject.oneui.widget.ui.widget.CardView                
                    android:id="@+id/poweroff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    app:TitleText="@string/poweroff"
                    app:IconDrawable="@drawable/ic_oui_power"
                    app:isDividerViewVisible="true" />

            </dev.oneuiproject.oneui.widget.RoundLinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</dev.oneuiproject.oneui.layout.ToolbarLayout>
